# saealib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  docker-compose.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactor.md  task.md
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
_modules/: index.html
_modules/saealib/: api.html  optimizer.html  population.html  problem.html  termination.html
_sources/: index.md.txt
_sources/api/: highlevel.md.txt
_sources/getting_started/: quickstart.md.txt
_sources/tutorials/: multi_objective.md.txt
_sources/user_guide/: index.md.txt
api/: acquisition.html  algorithms.html  callbacks.html  highlevel.html  index.html  initialization.html  operators.html  optimizer.html  population.html  problem.html  strategies.html  surrogate.html  termination.html  utils.html
api/_autosummary/: saealib.AcquisitionFunction.html  saealib.Algorithm.html  saealib.Archive.html  saealib.ArchiveMixin.html  saealib.CallbackManager.html  saealib.Constraint.html  saealib.Crossover.html  saealib.CrossoverBLXAlpha.html  saealib.CrossoverOnePoint.html  saealib.CrossoverSBX.html  saealib.CrossoverTwoPoint.html  saealib.CrossoverUniform.html  saealib.EnsembleSurrogateManager.html  saealib.Event.html  saealib.ExpectedImprovement.html  saealib.GA.html  saealib.GenerationBasedStrategy.html  saealib.GenerationEndEvent.html  saealib.GenerationStartEvent.html  saealib.GlobalSurrogateManager.html  saealib.Individual.html  saealib.IndividualBasedStrategy.html  saealib.Initializer.html  saealib.LHSInitializer.html  saealib.LocalSurrogateManager.html  saealib.LowerConfidenceBound.html  saealib.MaxUncertainty.html  saealib.MeanPrediction.html  saealib.Mutation.html  saealib.MutationGaussian.html  saealib.MutationPolynomial.html  saealib.MutationUniform.html  saealib.OptimizationStrategy.html  saealib.Optimizer.html  saealib.PSO.html  saealib.ParentSelection.html  saealib.Population.html  saealib.PopulationAttribute.html  saealib.PostAskEvent.html  saealib.PostCrossoverEvent.html  (+21 more)
docs/: conf.py  index.md  references.bib  references.md
docs/_templates/: lang-switcher.html
docs/algorithms/: _page_template.md  ego.md  gp_ucb.md  index.md  maxunc.md  nsga2.md  nsga3.md  rbf_cors.md  sms_emoa.md  spea2.md
docs/api/: acquisition.md  index.md  problem.md  registry.md  strategies.md  surrogate.md  termination.md
docs/components/: _page_template.md  acquisition_functions.md  algorithm.md  callbacks.md  comparators.md  constraints.md  crossover.md  decomposition.md  dominance.md  evaluation.md  extension_guidelines.md  index.md  initialization.md  mutation.md  nondominated_sorting.md  optimization_state.md  parent_selection.md  population.md  problem.md  stage.md  strategies.md  surrogate.md  surrogate_manager.md  surrogate_switching.md  survivor_selection.md  termination.md  training_set.md
docs/examples/: index.md
docs/getting_started/: index.md  installation.md  quickstart.md  what_is_saealib.md
docs/tutorials/: acquisition_functions.md  callbacks.md  checkpoint.md  constraints.md  custom_components.md  dynamic_optimization.md  external_libraries.md  index.md  logging.md  mixed_variable.md  multi_objective.md  single_objective.md
docs/user_guide/: architecture.md
examples/: algorithms.html  custom.html  index.html  sample_custom_evaluator.py  sample_equality_constraint.py  sample_initial_evaluation_callbacks.py  sample_saga_rbf.py  sample_saga_rbf_gb.py  sample_saga_rbf_ib.py  sample_saga_rbf_moo.py  sample_saga_rbf_novelty_ensemble.py  sample_saga_rbf_ps.py  sample_sapso_rbf.py  surrogates.html
getting_started/: index.html  installation.html  quickstart.html  what_is_saealib.html
main/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/_modules/: index.html
main/_sources/: index.md.txt
main/_static/: documentation_options.js
main/api/: acquisition.html  algorithms.html  callbacks.html  highlevel.html  index.html  initialization.html  operators.html  optimizer.html  population.html  problem.html  strategies.html  surrogate.html  termination.html  utils.html
main/getting_started/: index.html  installation.html  quickstart.html  what_is_saealib.html
main/tutorials/: acquisition_functions.html  index.html  (+5 more)
src/: main.py  sample_saga_rbf.py
tests/: test_acquisition.py  test_api.py  test_benchmarks_dtlz.py  test_benchmarks_singleobj.py  test_benchmarks_zdt.py  test_callback.py  test_checkpoint.py  test_constraint.py  test_constraint_handler.py  test_constraint_surrogate.py  test_decomposition.py  test_defaults.py  test_direct_strategy.py  test_epsilon_constraint_handler.py  test_evaluator.py  test_exceptions.py  test_exports.py  test_ga_mixed.py  test_gp_surrogate.py  test_gradient_repair_handler.py  test_initial_evaluation_event.py  test_initializers.py  test_integration.py  test_moo.py  test_moo_acquisition.py  test_nds_bench.py  test_operators.py  test_optimizer_defaults.py  test_optimizer_from_problem_file.py  test_optimizer_preset.py  test_optimizer_validate.py  test_per_objective.py  test_pipeline.py  test_population.py  test_problem_variables.py  test_pso.py  test_registry.py  test_registry_components.py  test_sklearn_surrogate.py  test_stages.py  (+9 more)
tutorials/: acquisition_functions.html  callbacks.html  constraints.html  custom_components.html  index.html  multi_objective.html  single_objective.html
user_guide/: architecture.html  custom_components.html  index.html
v0.1.0b1/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v0.1.0b2/: .buildinfo  genindex.html  index.html  search.html  searchindex.js  sitemap.xml
v0.1.0b3/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
v0.1.0b4/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
(+1346 files in other folders)
