[project]
name = "saealib"
dynamic = ["version"]
description = "A Python library for Surrogate-Assisted Evolutionary Algorithms (SAEAs)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.22.1",
    "scipy>=1.0.0",
    "typing-extensions>=4.15.0",
]
authors = [
    { name = "shlka", email = "82360718+shlka@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
parallel = ["joblib>=1.0.0"]
sklearn = ["scikit-learn>=1.0.0"]
xgboost = ["xgboost>=1.7.0"]
lightgbm = ["lightgbm>=3.0.0"]
torch = ["torch>=2.0.0"]

[project.urls]
Homepage = "https://github.com/shlka/saealib"
Repository = "https://github.com/shlka/saealib"
Documentation = "https://shlka.github.io/saealib/"
"Bug Tracker" = "https://github.com/shlka/saealib/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/saealib"]

[dependency-groups]
dev = [
    "opfunu>=1.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "setuptools>=80.9.0",
    "ruff",
    "scikit-learn>=1.0.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.0.0",
    "torch>=2.0.0",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3,<9",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-intl>=2.3.0",
    "sphinx-multiversion>=0.2.4",
    "sphinx-sitemap>=2.6.0",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
unresolved-attribute = "error"
unknown-argument = "error"
invalid-assignment = "error"
invalid-method-override = "error"
invalid-argument-type = "error"
unsupported-operator = "error"
no-matching-overload = "error"
invalid-return-type = "error"

# archive.py: ArchiveMixin accesses Population attributes (schema, _size, etc.)
# that ty cannot resolve statically because the mixin's MRO is determined at
# class-composition time.  Changing the pattern to Protocol/Generic would
# require a breaking API change and is deferred.
[[tool.ty.overrides]]
include = ["src/saealib/population/archive.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "warn"
unknown-argument = "warn"

# test_termination.py: SimpleNamespace is used as a lightweight
# OptimizationContext stub (68 invalid-argument-type) and the `in` operator
# is applied to `str | None` intentionally to test stall detection
# (2 unsupported-operator).  Replacing with a full mock or TypedDict would
# add ~100 lines of boilerplate with no semantic value for these unit tests.
[[tool.ty.overrides]]
include = ["tests/test_termination.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "warn"
unsupported-operator = "warn"

# test_pso.py: _DummyProvider is a minimal ComponentProvider stub that
# exposes only the fields needed by PSO.ask/tell.  Inheriting from
# ComponentProvider would require wiring unrelated components.
[[tool.ty.overrides]]
include = ["tests/test_pso.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "warn"

# test_strategies.py / test_operators.py: _MockProvider / _DispatchOnlyProvider
# are minimal stubs used to test strategy.step() and ga.ask() in isolation.
[[tool.ty.overrides]]
include = ["tests/test_strategies.py", "tests/test_operators.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "warn"

# test_integration.py: problem fixture uses list[int] for lb/ub where
# Problem.__init__ expects list[int | float].  The values are valid at
# runtime; widening the test literals would obscure intent.
[[tool.ty.overrides]]
include = ["tests/test_integration.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "warn"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "NPY",
    "SIM",
    "RUF",
]

ignore = [
    "D100",
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "N802", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
