[project]
name = "saealib"
dynamic = ["version"]
description = "A Python library for Surrogate-Assisted Evolutionary Algorithms (SAEAs)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.22.1",
    "scipy>=1.0.0",
    "typing-extensions>=4.15.0",
    "pyyaml>=6.0",
]
authors = [
    { name = "shlka", email = "82360718+shlka@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
parallel = ["joblib>=1.0.0"]
sklearn = ["scikit-learn>=1.0.0"]
xgboost = ["xgboost>=1.7.0"]
lightgbm = ["lightgbm>=3.0.0"]
torch = ["torch>=2.0.0"]

[project.urls]
Homepage = "https://github.com/shlka/saealib"
Repository = "https://github.com/shlka/saealib"
Documentation = "https://shlka.github.io/saealib/"
"Bug Tracker" = "https://github.com/shlka/saealib/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/saealib"]

[dependency-groups]
dev = [
    "opfunu>=1.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "setuptools>=80.9.0",
    "ruff",
    "scikit-learn>=1.0.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.0.0",
    "torch>=2.0.0",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3,<9",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-intl>=2.3.0",
    "sphinx-multiversion>=0.2.4",
    "sphinx-sitemap>=2.6.0",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
unresolved-attribute = "error"
unknown-argument = "error"
invalid-assignment = "error"
invalid-method-override = "error"
invalid-argument-type = "error"
unsupported-operator = "error"
no-matching-overload = "error"
invalid-return-type = "error"


[tool.coverage.run]
branch = true
source = ["saealib"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    '\.\.\.',
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "NPY",
    "SIM",
    "RUF",
]

ignore = [
    "D100",
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "N802", "N806"]
# D102: Stage.execute() is documented in the ABC (pipeline.py); concrete
# implementations in stages.py inherit the docstring and need not repeat it.
"src/saealib/stages.py" = ["D102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
